tidy up fonts and remove outdated files

--- a/templates/line18/index.html
+++ b/templates/line18/index.html
@@ -16,7 +16,7 @@
   <script>
   //CHART JS
   Chart.defaults.global.legend.display = false,
-  Chart.defaults.global.defaultFontFamily = 'open sans'
+//  Chart.defaults.global.defaultFontFamily = 'open sans'
 
 
   chartIt();
