added bold to x aces

--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -71,7 +71,8 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Median Income Per Zip Code'
+              labelString: 'Median Income Per Zip Code',
+              fontStyle: 'bold'
             }
           }],
           yAxes:[{
@@ -85,7 +86,8 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'COVID19 Deaths Per 100,000'
+              labelString: 'COVID19 Deaths Per 100,000',
+              fontStyle: 'bold'
             }
           }]
         }
