--- a/templates/scatter2/index.html
+++ b/templates/scatter2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Race and COVID19 Death Rate</title>
+  <title>Senior % of Population (Age 65+) and COVID19 Death Rate</title>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -49,7 +49,7 @@
           callbacks: {
             label: function(tooltipItem, data) {
               var labels = data.labels[tooltipItem.index];
-              return [labels, 'White Pop Per Zip Code: ' + Math.round(tooltipItem.xLabel).toLocaleString('en-US')+'%', 'COVID19 Death Rate: '+ Math.round(tooltipItem.yLabel)+ ' per 100,000 people'];
+              return [labels, 'Age 65+ Per Zip Code: ' + Math.round(tooltipItem.xLabel).toLocaleString('en-US')+'%', 'COVID19 Death Rate: '+ Math.round(tooltipItem.yLabel)+ ' per 100,000 people'];
 
             }
           },
@@ -71,7 +71,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Non-Hispanic White (%) Per Zip Code',
+              labelString: 'Age 65+ % Per Zip Code',
               fontStyle: 'bold'
             }
           }],
@@ -118,8 +118,8 @@
     const table = data.split('\n').slice(1); // register new line and remove first row of data
     table.forEach(row => {
       const columns = row.split(',');
-      const race = columns[6];
-      xs.push(race);
+      const age = columns[5];
+      xs.push(age);
       const covid_death = columns[10];
       ys.push(parseFloat(covid_death)); //make data from string to number
       const neighborhood = columns[2];
@@ -128,7 +128,7 @@
       as.push(zips);
       const zips_nbhd = [neighborhood+ ' ('+zips+')'];
       za.push(zips_nbhd);
-      const xsys = {x: parseFloat(race), y: parseFloat(covid_death), label: neighborhood};
+      const xsys = {x: parseFloat(age), y: parseFloat(covid_death), label: neighborhood};
       xy.push(xsys);
   //    console.log(xsys);
       console.log(zips_nbhd);
