new chart and update on x titles

--- a/templates/scatter1/index.html
+++ b/templates/scatter1/index.html
@@ -71,7 +71,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Median Income Per Zip Code',
+              labelString: 'Median Income (Per Zip Code)',
               fontStyle: 'bold'
             }
           }],
