--- a/templates/scatter2/index.html
+++ b/templates/scatter2/index.html
@@ -71,7 +71,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Age 65+ % Per Zip Code',
+              labelString: 'Age 65+ % (Per Zip Code)',
               fontStyle: 'bold'
             }
           }],
