--- a/templates/scatter3/index.html
+++ b/templates/scatter3/index.html
@@ -71,7 +71,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Non-Hispanic White % Per Zip Code',
+              labelString: 'Non-Hispanic White % (Per Zip Code)',
               fontStyle: 'bold'
             }
           }],
