--- a/templates/scatter6/index.html
+++ b/templates/scatter6/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Health Insurance and COVID19 Death Rate</title>
+  <title>Comorbidity Severity Index and COVID19 Death Rate</title>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -49,7 +49,7 @@
           callbacks: {
             label: function(tooltipItem, data) {
               var labels = data.labels[tooltipItem.index];
-              return [labels, 'No Health Insurance: ' + Math.round(tooltipItem.xLabel).toLocaleString('en-US')+'%', 'COVID19 Death Rate: '+ Math.round(tooltipItem.yLabel)+ ' per 100,000 people'];
+              return [labels, 'Comorbidity Severity Index: ' + Math.round(tooltipItem.xLabel).toLocaleString('en-US'), 'COVID19 Death Rate: '+ Math.round(tooltipItem.yLabel)+ ' per 100,000 people'];
 
             }
           },
@@ -62,7 +62,7 @@
             display: true,
             ticks: {
               callback: function(value, index, values) {
-                return value.toLocaleString('en-US')+'%';
+                return value.toLocaleString('en-US');
                 ;
               }
             },
@@ -71,7 +71,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'No Health Insurance (Per Zip Code)',
+              labelString: 'Comorbidity Severity Index (Per Zip Code)',
               fontStyle: 'bold'
             }
           }],
@@ -118,8 +118,8 @@
     const table = data.split('\n').slice(1); // register new line and remove first row of data
     table.forEach(row => {
       const columns = row.split(',');
-      const insurance = columns[9];
-      xs.push(insurance);
+      const comorb = columns[7];
+      xs.push(comorb);
       const covid_death = columns[10];
       ys.push(parseFloat(covid_death)); //make data from string to number
       const neighborhood = columns[2];
@@ -128,7 +128,7 @@
       as.push(zips);
       const zips_nbhd = [neighborhood+ ' ('+zips+')'];
       za.push(zips_nbhd);
-      const xsys = {x: parseFloat(insurance), y: parseFloat(covid_death), label: neighborhood};
+      const xsys = {x: parseFloat(comorb), y: parseFloat(covid_death), label: neighborhood};
       xy.push(xsys);
   //    console.log(xsys);
       console.log(zips_nbhd);
