--- a/templates/linechartmulti24/index.html
+++ b/templates/linechartmulti24/index.html
@@ -1,109 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>People in Custody at Dept. of Correction Facilities: Detained or Sentenced</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+  <title>Artists in Employed in NYC 2019 and 2020</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+  <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
+  <!--  <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>-->
+  <!-- <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.min.js"></script>-->
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
-
-    </head>
-    <body>
-
-
-<canvas id="linechart23" width=auto max-height="400"></canvas>
-<script>
-
-Chart.defaults.global.responsive = true
-Chart.defaults.global.tooltips.backgroundColor="grey"
-Chart.defaults.global.maintainAspectRatio = true
-Chart.defaults.global.legend = false
+</head>
+<body>
+  <canvas id ="chart" width="800" height="400"></canvas>
+  <script>
+  //CHART JS
+  Chart.defaults.global.legend.display = false,
+//  Chart.defaults.global.defaultFontFamily = 'open sans'
 
 
-var ctx = document.getElementById("linechart23");
+  chartIt();
 
-var myChart = new Chart(ctx, {
-    type: 'line',
-    fill: false,
-    data: {
-        labels: ["June 12, 2017","June 19, 2017","June 26, 2017","July 3, 2017","July 10, 2017","July 17, 2017","July 24, 2017","July 31, 2017","August 7, 2017","August 14, 2017","August 21, 2017","August 28, 2017","September 4, 2017","September 11, 2017","September 18, 2017","September 25, 2017","October 2, 2017","October 9, 2017","October 16, 2017","October 23, 2017","October 30, 2017","November 6, 2017","November 13, 2017","November 27, 2017","December 4, 2017","December 11, 2017","December 18, 2017","December 25, 2017","January 1, 2018","January 8, 2018","January 15, 2018","January 22, 2018","January 29, 2018","February 5, 2018","February 12, 2018","February 19, 2018","February 26, 2018","March 5, 2018","March 12, 2018","March 19, 2018","March 26, 2018","April 2, 2018","April 9, 2018","April 16, 2018","April 23, 2018","April 30, 2018","May 7, 2018","May 14, 2018","May 21, 2018","May 28, 2018","June 11, 2018","June 18, 2018","June 25, 2018","July 2, 2018","July 9, 2018","July 16, 2018","July 23, 2018","July 30, 2018","August 6, 2018","August 13, 2018","August 20, 2018","August 27, 2018","September 3, 2018","September 17, 2018","September 24, 2018","October 1, 2018","October 9, 2018","October 15, 2018","October 29, 2018","November 5, 2018","November 12, 2018","November 19, 2018","November 26, 2018","December 3, 2018","December 10, 2018","December 17, 2018","December 24, 2018","December 31, 2018","January 7, 2019","January 14, 2019","January 21, 2019","January 28, 2019","February 4, 2019","February 11, 2019","February 18, 2019","February 25, 2019","March 4, 2019","March 11, 2019","March 18, 2019","March 25, 2019","April 1, 2019","April 8, 2019","April 15, 2019","April 22, 2019","April 29, 2019","May 6, 2019","May 13, 2019","May 20, 2019","May 27, 2019"],
-        datasets: [
-            {
-              label: "Detained",
-              fill: false,
-              lineTension: 0.5,
-              backgroundColor:"#F59F00",
-              borderColor: "#F59F00",
-              borderWidth: 3,
-              borderCapStyle: 'butt',
-              borderDash: [],
-              borderDashOffset: 0.0,
+  async function chartIt() {
+    const data = await getData();
+    const ctx = document.getElementById('chart').getContext('2d');
+    const myChart = new Chart(ctx, {
+      type: 'line',
+      data: {
+        labels: data.xs,
+        datasets: [{
+          label: 'Average Monthy Revenue',
+          data: data.ys,
+          fill: false,
+          lineTension: 0.5,
+          backgroundColor:"#222222",
+          borderColor: "#222222",
+          borderWidth: 3,
+          borderCapStyle: 'butt',
+          borderDash: [],
+          borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-              pointBorderColor: "#F59F00",
-              pointBackgroundColor: "#F59F00",
-              pointBorderWidth: 1,
-              pointHoverRadius: 6,
-              pointHoverBackgroundColor: "#F59F00",
-              pointHoverBorderColor: "#F59F00",
-              pointHoverBorderWidth: 2,
-              pointRadius: 1,
-              pointHitRadius: 4,
-              hoverBackgroundColor: "#F59F00",
-              hoverBorderColor: "#F59F00",
-              data: [6209,6199,6253,6180,6219,6151,6152,6232,6208,6215,6129,6156,6200,6323,6374,6239,6195,6206,6277,6219,6273,6182,6217,6140,6104,6132,5988,5847,5912,5998,6021,6112,6143,6076,6013,6013,5970,5918,5817,5748,5704,5658,5687,5617,5602,5555,5553,5491,5427,5410,5395,5365,5360,5300,5331,5321,5332,5334,5336,5381,5375,5413,5452,5599,5570,5463,5470,5516,5454,5408,5384,5402,5418,5407,5383,5368,5154,5230,5308,5337,5350,5432,5335,5343,5322,5284,5230,5249,5188,5120,5135,5122,5086,5027,4990,5002,4960,4924,4873]
-            },
-            {
-              label: "Sentenced",
-              fill: false,
-              lineTension: 0.5,
-              backgroundColor:"#12B886",
-              borderColor: "#12B886",
-              borderWidth: 3,
-              borderCapStyle: 'butt',
-              borderDash: [],
-              borderDashOffset: 0.0,
-          //    borderJoinStyle: 'miter',
-              pointBorderColor: "#12B886",
-              pointBackgroundColor: "#12B886",
-              pointBorderWidth: 1,
-              pointHoverRadius: 6,
-              pointHoverBackgroundColor: "#12B886",
-              pointHoverBorderColor: "#12B886",
-              pointHoverBorderWidth: 2,
-              pointRadius: 1,
-              pointHitRadius: 4,
-              hoverBackgroundColor: "#12B886",
-              hoverBorderColor: "#12B886",
-              data: [2784,2816,2775,2786,2747,2829,2890,2798,2810,2827,2828,2787,2765,2791,2798,2816,2763,2778,2748,2799,2782,2810,2806,2762,2801,2812,2805,2775,2577,2569,2689,2673,2721,2777,2782,2794,2787,2802,2858,2871,2805,2764,2735,2748,2770,2829,2776,2775,2757,2703,2710,2689,2651,2693,2622,2674,2686,2625,2615,2607,2579,2560,2551,2516,2572,2593,2605,2599,2618,2627,2655,2661,2599,2589,2606,2578,2560,2397,2419,2559,2597,2638,2663,2673,2677,2670,2658,2677,2677,2658,2612,2585,2616,2646,2609,2618,2647,2598,2555]
-            }
-          ]
-        },
-    options: {
-
-      tooltips: {
-        callbacks: {
-          label: function(tooltipItem, data) {
-            var datasetLabel = data.datasets[tooltipItem.datasetIndex].label || '';
-            return datasetLabel + ': '+'' +data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US') + ' People';
-          }
-        }
-      },
-      scales: {
-        yAxes: [{
-          stacked: false,
-          scaleLabel:{
-            display: true,
-            labelString: 'People'
-          },
-          ticks: {
-            beginAtZero:false,
-            callback: function(value) {
-              return '' + value.toLocaleString('en-US');
-            }
-          }
+          pointBorderColor: "#222222",
+          pointBackgroundColor: "#222222",
+          pointBorderWidth: 1,
+          pointHoverRadius: 6,
+          pointHoverBackgroundColor: "#E6E6E6",
+          pointHoverBorderColor: "#E6E6E6",
+          pointHoverBorderWidth: 2,
+          pointRadius: 1,
+          pointHitRadius: 4,
+          hoverBackgroundColor: "#E6E6E6",
+          hoverBorderColor: "#E6E6E6",
         }]
+      },
+      options: {
+        cornerRadius: 20,
+        scales: {
+          yAxes: [{
+            ticks: {
+              //max: 5,
+              //min: 200000,
+              //stepSize: 200000,
+              callback: function(value, index, values) {
+                return '$' + value.toLocaleString('en-US')+'';
+              },
+              beginAtZero: true,
+            },
+            gridLines: {
+              display: true
+            },
+            scaleLabel: {
+              display: true,
+              labelString: 'Average Monthly Revenue'
+            }
+          }],
+          xAxes: [{
+            ticks: {
+              callback: function(value, index, values) {
+                return value;
+              },
+              fontStyle: 'strong'
+            },
+            gridLines: {
+              display: true
+            }
+          }]
+        },
+        tooltips: {
+          callbacks: {
+            label: function(tooltipItem, data) {
+              return '$'+ data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Average Revenue';
+            },
+          },
+        //  backgroundColor: '#434343',
+        //  borderColor: '#f5f5f5',
+        //  borderWidth: 1,
+          displayColors: false
+        }
       }
-    }
-  });
-</script>
-    </body>
+    });
+  }
+  //SPLITTING AND BRINGING IN CSV DATA
+  async function getData() {
+    const xs = [];
+    const ys = [];
+
+    const response = await fetch('artists_employment_nyc_2019_2020.csv');
+    const data = await response.text();
+
+    const table = data.split('\n').slice(1);
+    table.forEach(row => {
+      const columns = row.split(',');
+      const month = columns[0];
+      xs.push(month);
+      const 2019 = columns[1];
+      ys.push(parseFloat(2019)); //make data from string to number and added mean payers of 14 degrees
+      console.log(month, 2019);
+    });
+    return { xs, ys };
+  }
+
+
+  </script>
+</body>
 </html>
