--- a/templates/linechartmulti24/index.html
+++ b/templates/linechartmulti24/index.html
@@ -29,7 +29,7 @@
       data: {
         labels: data.xs,
         datasets: [{
-          label: 'Average Monthy Revenue',
+          label: 'Artist Employment 2019',
           data: data.ys,
           fill: false,
           lineTension: 0.5,
@@ -53,7 +53,7 @@
           hoverBorderColor: "#E6E6E6",
         },
         {
-          label: 'Average Monthy Revenue',
+          label: 'Artist Employment 2020',
           data: data.ys2,
           fill: false,
           lineTension: 0.5,
@@ -82,6 +82,7 @@
         cornerRadius: 20,
         scales: {
           yAxes: [{
+            stacked: false,
             ticks: {
               //max: 5,
               //min: 200000,
@@ -141,7 +142,7 @@
       xs.push(month);
       const twenty19 = columns[1];
       ys.push(parseFloat(twenty19)); //make data from string to number and added mean payers of 14 degrees
-      const twenty20 = columns[1];
+      const twenty20 = columns[2];
       ys2.push(parseFloat(twenty20)); //make data from string to number and added mean payers of 14 degrees
       console.log(month, twenty19, twenty20);
     });
