--- a/templates/linechartmulti24/index.html
+++ b/templates/linechartmulti24/index.html
@@ -143,7 +143,7 @@
       const twenty20 = columns[1];
       ys.push(parseFloat(twenty20)); //make data from string to number and added mean payers of 14 degrees
       const twenty19 = columns[2];
-      ys2.push(parseFloat(twenty19)); //make data from string to number and added mean payers of 14 degrees
+      12.push(parseFloat(twenty19)); //make data from string to number and added mean payers of 14 degrees
       console.log(month, twenty20, twenty19);
     });
     return { xs, ys, ys2 };
