--- a/templates/linechartmulti24/index.html
+++ b/templates/linechartmulti24/index.html
@@ -7,8 +7,8 @@
   <title>Artists in Employed in NYC 2019 and 2020</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
-  <!--  <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>-->
-  <!-- <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.min.js"></script>-->
+  <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
+  <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.min.js"></script>
 
 </head>
 <body>
@@ -16,7 +16,7 @@
   <script>
   //CHART JS
   Chart.defaults.global.legend.display = true,
-//  Chart.defaults.global.defaultFontFamily = 'open sans'
+  //Chart.defaults.global.defaultFontFamily = 'open sans'
 
 
   chartIt();
@@ -57,19 +57,19 @@
           data: data.ys2,
           fill: false,
           lineTension: 0.5,
-          backgroundColor:"#666666",
-          borderColor: "#666666",
+          backgroundColor:"#CACACA",
+          borderColor: "#CACACA",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#666666",
-          pointBackgroundColor: "#666666",
+          pointBorderColor: "#CACACA",
+          pointBackgroundColor: "#CACACA",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#666666",
-          pointHoverBorderColor: "#666666",
+          pointHoverBackgroundColor: "#CACACA",
+          pointHoverBorderColor: "#CACACA",
           pointHoverBorderWidth: 2,
           pointRadius: 1,
           pointHitRadius: 4,
@@ -77,79 +77,79 @@
           hoverBorderColor: "#E6E6E6",
         }
       ]
-      },
-      options: {
-        cornerRadius: 20,
-        scales: {
-          yAxes: [{
-            stacked: false,
-            ticks: {
-              //max: 5,
-              //min: 200000,
-              //stepSize: 200000,
-              callback: function(value, index, values) {
-                return value.toLocaleString('en-US')+'';
-              },
-              beginAtZero: true,
+    },
+    options: {
+      cornerRadius: 20,
+      scales: {
+        yAxes: [{
+          stacked: false,
+          ticks: {
+            //max: 5,
+            //min: 200000,
+            //stepSize: 200000,
+            callback: function(value, index, values) {
+              return value.toLocaleString('en-US')+'';
             },
-            gridLines: {
-              display: true
-            },
-            scaleLabel: {
-              display: true,
-              labelString: 'Artists Employed in NYC'
-            }
-          }],
-          xAxes: [{
-            ticks: {
-              callback: function(value, index, values) {
-                return value;
-              },
-              fontStyle: 'strong'
-            },
-            gridLines: {
-              display: true
-            }
-          }]
-        },
-        tooltips: {
-          callbacks: {
-            label: function(tooltipItem, data) {
-              return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Artists Employed';
-            },
+            beginAtZero: true,
           },
+          gridLines: {
+            display: true
+          },
+          scaleLabel: {
+            display: true,
+            labelString: 'Artists Employed in NYC'
+          }
+        }],
+        xAxes: [{
+          ticks: {
+            callback: function(value, index, values) {
+              return value;
+            },
+            fontStyle: 'strong'
+          },
+          gridLines: {
+            display: true
+          }
+        }]
+      },
+      tooltips: {
+        callbacks: {
+          label: function(tooltipItem, data) {
+            return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Artists Employed';
+          },
+        },
         //  backgroundColor: '#434343',
         //  borderColor: '#f5f5f5',
         //  borderWidth: 1,
-          displayColors: false
-        }
+        displayColors: false
       }
-    });
-  }
-  //SPLITTING AND BRINGING IN CSV DATA
-  async function getData() {
-    const xs = [];
-    const ys = [];
-    const ys2 = [];
+    }
+  });
+}
+//SPLITTING AND BRINGING IN CSV DATA
+async function getData() {
+  const xs = [];
+  const ys = [];
+  const ys2 = [];
 
-    const response = await fetch('artists_employment_nyc_2019_2020.csv');
-    const data = await response.text();
+  const response = await fetch('artists_employment_nyc_2019_2020.csv');
+  const data = await response.text();
 
-    const table = data.split('\n').slice(1);
-    table.forEach(row => {
-      const columns = row.split(',');
-      const month = columns[0];
-      xs.push(month);
-      const twenty20 = columns[1];
-      ys.push(parseFloat(twenty20)); //make data from string to number and added mean payers of 14 degrees
-      const twenty19 = columns[2];
-      ys2.push(parseFloat(twenty19)); //make data from string to number and added mean payers of 14 degrees
-      console.log(month, twenty20, twenty19);
-    });
-    return { xs, ys, ys2 };
-  }
+  const table = data.split('\n').slice(1);
+  table.forEach(row => {
+    const columns = row.split(',');
+    const month = columns[0];
+    xs.push(month);
+    const twenty20 = columns[1];
+    ys.push(parseFloat(twenty20)); //make data from string to number and added mean payers of 14 degrees
+    const twenty19 = columns[2];
+    ys2.push(parseFloat(twenty19)); //make data from string to number and added mean payers of 14 degrees
+    console.log(month, twenty20, twenty19);
+  });
+  return { xs, ys, ys2 };
+}
 
 
-  </script>
+</script>
 </body>
 </html>
