--- a/templates/barhorizontal34/index.html
+++ b/templates/barhorizontal34/index.html
@@ -32,11 +32,11 @@
           label: 'Employment Change by Sector %',
           data: data.ys,
           fill: false,
-          backgroundColor: ['#CACACA','#CACACA','#CACACA','#CACACA','#CACACA','#CACACA','#800000'],
+          backgroundColor: ['#007534','#007534','#007534','#CACACA','#CACACA','#CACACA','#800000'],
           borderColor: '#CACACA',
           borderWidth: 1,
           lineTension: 4,
-          hoverBackgroundColor: '#fa5047',
+          hoverBackgroundColor: '#E6E6E6',
           barPercentage: .8
         }]
       },
@@ -56,7 +56,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Employment Change by Sector %'
+              labelString: 'Employment Change by Sector'
             }
           }],
           yAxes: [{
