--- a/templates/barhorizontal34/index.html
+++ b/templates/barhorizontal34/index.html
@@ -32,7 +32,7 @@
           label: 'Employment Change by Sector %',
           data: data.ys,
           fill: false,
-          backgroundColor: ['#007534','#007534','#007534','#CACACA','#CACACA','#CACACA','#800000'],
+          backgroundColor: ['#666666','#666666','#666666','#CACACA','#CACACA','#CACACA','#800000'],
           borderColor: '#CACACA',
           borderWidth: 1,
           lineTension: 4,
@@ -56,7 +56,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Employment Change by Sector'
+              labelString: 'Employment Change by Sector (July 2019 vs July 2020)'
             }
           }],
           yAxes: [{
@@ -65,7 +65,7 @@
                 return value;
               },
               //fontStyle: 'strong'
-              fontSize: 9,
+              //fontSize: 9,
             },
             gridLines: {
               display: false
