--- a/templates/linechartmulti24/index.html
+++ b/templates/linechartmulti24/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Artists in Employed in NYC 2019 and 2020</title>
+  <title>Artists Employed in NYC 2019 and 2020</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
   <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -109,7 +109,11 @@
           },
           gridLines: {
             display: true
-          }
+          },
+          scaleLabel: {
+              display: true,
+              labelString: 'Artists Employed in NYC (2019 vs 2020)'
+            }
         }]
       },
       tooltips: {
