--- a/templates/barhorizontal34/index.html
+++ b/templates/barhorizontal34/index.html
@@ -42,6 +42,10 @@
       },
       options: {
         cornerRadius: 20,
+        title:{
+          display: true,
+          text: 'Employment Change by Sector (July 2019 vs July 2020)'
+        },
         scales: {
           xAxes: [{
             ticks: {
@@ -55,7 +59,7 @@
               display: false
             },
             scaleLabel: {
-              display: true,
+              display: false,
               labelString: 'Employment Change by Sector (July 2019 vs July 2020)'
             }
           }],
