--- a/templates/linechartmulti24/index.html
+++ b/templates/linechartmulti24/index.html
@@ -109,7 +109,7 @@ Chart.defaults.global.title.display = true
             callback: function(value, index, values) {
               return value;
             },
-            fontStyle: 'strong'
+            //fontStyle: 'strong'
           },
           gridLines: {
             display: true
