--- a/templates/linechartmulti24/index.html
+++ b/templates/linechartmulti24/index.html
@@ -82,7 +82,7 @@ Chart.defaults.global.title.display = true
       cornerRadius: 20,
       title:{
         display: false,
-        text: 'Artists Employed in NYC (2019 vs 2020)'
+        text: 'Number of Jobs in Arts Sector in NYC(2019 vs 2020)'
       },
       scales: {
         yAxes: [{
@@ -101,7 +101,7 @@ Chart.defaults.global.title.display = true
           },
           scaleLabel: {
             display: true,
-            labelString: 'Artists Employed in NYC'
+            labelString: 'Number of Jobs in Arts Sector in NYC'
           }
         }],
         xAxes: [{
@@ -116,7 +116,7 @@ Chart.defaults.global.title.display = true
           },
           scaleLabel: {
               display: true,
-              labelString: 'Artists Employed in NYC (2019 vs 2020)'
+              labelString: 'Number of Jobs in Arts Sector in NYC (2019 vs 2020)'
             }
         }]
       },
