--- a/templates/line20/index.html
+++ b/templates/line20/index.html
@@ -33,15 +33,15 @@
           data: data.ys,
           fill: false,
           lineTension: 0.5,
-          backgroundColor:"#222222",
-          borderColor: "#222222",
+          backgroundColor:"#2F56A6",
+          borderColor: "#2F56A6",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#222222",
-          pointBackgroundColor: "#222222",
+          pointBorderColor: "#2F56A6",
+          pointBackgroundColor: "#2F56A6",
           pointBorderWidth: 1,
           pointHoverRadius: 6,
           pointHoverBackgroundColor: "#E6E6E6",
@@ -62,7 +62,7 @@
               //min: 200000,
               //stepSize: 200000,
               callback: function(value, index, values) {
-                return '$' + value.toLocaleString('en-US')+'';
+                return value.toLocaleString('en-US')+'';
               },
               beginAtZero: true,
             },
